Add additional tables and fix API
